use music command (which streams) for loops instead of samples (which caches), as a bonus can now use random loop in lobby mode only for overseer
Former-commit-id: abbdac52a95b10bbf9a57b342c226908dc8d0666

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -272,3 +272,19 @@ specbind MOUSE1 [ specmodeswitch ]
 specbind MOUSE2 [ spectator 0 ]
 //specbind MOUSE4 [ specfollow 1 ]
 //specbind MOUSE5 [ specfollow -1 ]
+
+musicfiles = [
+	"loops/mitaman/blinkrage"
+	"loops/mitaman/dirtyboyz"
+	"loops/mitaman/enterdeath"
+	"loops/mitaman/heavyhit"
+	"loops/mitaman/mrebow"
+	"loops/mitaman/oppforce"
+]
+playmusic = [
+	if (> $numargs 0) [
+		music $arg1 [playmusic $arg1]
+	] [
+		playmusic (at $musicfiles (rnd (listlen $musicfiles)))
+	]
+]
