--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -72,7 +72,7 @@
 // waterfog 150
 // blurlms 0
 
-"on_start" = [ if (= (gamemode) 1) [ sleep (* $titlecard 2) [ overseer_intro ] ] ]
+"on_start" = [ if (= (gamemode) 1) [ playmusic; sleep (* $titlecard 2) [ overseer_intro ] ] ]
 "overseer_intro" = [
 	overseer_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
 	overseer_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
@@ -394,10 +394,10 @@ mmodel "acord/console1"
 mmodel "acord/doors/door1"
 mmodel "acord/doors/door2"
 
-mapsound "sfx/teleport" 250 "air" -1 -1
-mapsound "ambience/wastewind" 25 "air" -1 -1
-mapsound "ambience/hollowwind" 25 "air" -1 -1
-mapsound "ambience/machine1" 15 "air" -1 -1
-mapsound "sfx/door" 250 "air" -1 -1
-mapsound "loops/mitaman/oppforce" 255 "air" 500 0
+mapsound "sfx/teleport" 255 "air" -1 -1
+mapsound "ambience/wastewind" 32 "air" -1 -1
+mapsound "ambience/hollowwind" 32 "air" -1 -1
+mapsound "ambience/machine1" 32 "air" -1 -1
+mapsound "sfx/door" 128 "air" -1 -1
+mapsound "ambience/hum" 192 "air" 450 0
 
