undo + 1 as it wasn't necessary
Former-commit-id: bf385108c05125194e558eead75e7d260852b0d0

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -285,6 +285,6 @@ playmusic = [
 	if (> $numargs 0) [
 		music $arg1 [music $arg1]
 	] [
-		playmusic (at $musicfiles (+ 1 (rnd (listlen $musicfiles))))
+		playmusic (at $musicfiles (rnd (listlen $musicfiles)))
 	]
 ]
