simplify playmusic alot so loops.. loop
Former-commit-id: cca07575932a9d79e23cec7e2172f9a9460a8aeb

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -281,10 +281,4 @@ musicfiles = [
 	"loops/mitaman/mrebow"
 	"loops/mitaman/oppforce"
 ]
-playmusic = [
-	if (> $numargs 0) [
-		music $arg1 [music $arg1]
-	] [
-		playmusic (at $musicfiles (rnd (listlen $musicfiles)))
-	]
-]
+playmusic = [ music (at $musicfiles (rnd (listlen $musicfiles))) ]
