retooled physics, speedscale is now more than just a fancy sounding variable, added impulse fx, added ability to drop weapons and flags, bots now try to give you any spare weapons they have if they're defending you and idle
Former-commit-id: b25bc31d38fcea1ffb35a011b2d2bbe77fcffe74

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -95,6 +95,8 @@ bind I				[ taunt ]
 bind E				[ action ]
 bind R				[ reload ]
 bind F				[ action ]
+bind C				[ drop ]
+bind X				[ dropflag ]
 bind G				[ weapon 6 ]
 bind Q				[ weapon 6 ]
 bind Z				[ zoom ]
@@ -115,7 +117,6 @@ bind INSERT			[ addbot ]
 bind DELETE			[ delbot ]
 bind HOME			[ spectator 1 ]
 bind END			[ spectator 0 ]
-bind C				[ domodifier 9 ]
 
 bind F1				[ toggleedit ]
 bind F2				[ showgui game ]
@@ -152,6 +153,7 @@ editbindvar 8		wireframe
 editbindvar 9		bypassheightmapcheck
 editbindvar 0		allfaces
 editbindvar K		blankgeom
+editbind C			[ domodifier 9 ]
 
 bind KP_DIVIDE		[ togglesound ]
 bind KP_MINUS		[ conskip 1 ]
@@ -280,5 +282,7 @@ musicfiles = [
 	"loops/mitaman/heavyhit"
 	"loops/mitaman/mrebow"
 	"loops/mitaman/oppforce"
+	"loops/mitaman/summerend"
+	"loops/mitaman/bloodystreet"
 ]
 playmusic = [ music (at $musicfiles (rnd (listlen $musicfiles))) ]
