--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -6,7 +6,7 @@
 // shadowmapambient 0
 // cloudheight 0.2
 // lavacolour 16729088
-// jumpvel 100.0
+jumpspeed 60.0
 // lightcompress 3
 // lerpsubdivsize 4
 // sinkfric 3.0
@@ -15,7 +15,7 @@
 // airfric 30.0
 // mmskylight 1
 // spinsky 1.5
-// impulsevel 100.0
+impulsespeed 50.0
 // cloudclip 0.2
 // cloudfade 0.5
 // skytexture 1
@@ -36,7 +36,7 @@
 // impulsetime 0
 // crawlspeed 40.0
 // lerpangle 44
-// impulsespeed 100.0
+impulsegravity 100.0
 // spinclouds 0.0
 // causticscale 100
 // edgetolerance 4
