--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -6,7 +6,7 @@
 // shadowmapambient 0
 // cloudheight 0.2
 // lavacolour 16729088
-// jumpvel 80.0
+jumpspeed 50.0
 // lightcompress 3
 // lerpsubdivsize 4
 // sinkfric 3.0
@@ -15,7 +15,7 @@
 // airfric 25.0
 // mmskylight 1
 // spinsky 0.0
-// impulsevel 100.0
+impulsespeed 50.0
 // cloudclip 0.5
 // cloudfade 0.2
 // skytexture 1
@@ -37,7 +37,7 @@
 // crawlspeed 30.0
 // lerpangle 44
 // flarelights 0
-// impulsespeed 100.0
+impulsegravity 100.0
 // spinclouds 0.0
 // causticscale 100
 // edgetolerance 4
