--- a/data/octa.cfg
+++ b/data/octa.cfg
@@ -1,8 +1,8 @@
 // Blood Frontier: OCTA Map Import Settings
 
-crawlspeed 40
-gravity 120
-jumpvel 100
+crawlspeed 50
+gravity 100
+jumpspeed 100
 movespeed 50
 liquidscale 0.6
 liquidfric 20
