--- a/data/sounds.cfg
+++ b/data/sounds.cfg
@@ -2,7 +2,8 @@ registersound	"sfx/press"					128	"air"			//	S_GUIPRESS
 registersound	"sfx/back"					128	"air"			//	S_GUIBACK
 registersound	"sfx/change"				128	"air"			//	S_GUIACT
 registersound	"player/jump"				64	"air"	64		//	S_JUMP = S_GAMESPECIFIC
-registersound	"sfx/land"					64	"air"	64		//	S_LAND
+registersound	"player/impulse"			64	"air"	128		//	S_IMPULSE
+registersound	"player/land"				64	"air"	96		//	S_LAND
 registersound	"player/pain1"				96	"air"	64		//	S_PAIN1
 registersound	"player/pain2"				96	"air"	64		//	S_PAIN2
 registersound	"player/pain3"				96	"air"	64		//	S_PAIN3
