defer some map start stuff to the first updateworld iteration (no more guessing the duration between startmap and real map start in on_start/scripts!)
Former-commit-id: 5aec2477c990c9ed1dd84ae700c9cc59b1174560

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -72,7 +72,7 @@ impulsegravity 100.0
 // waterfog 150
 // blurlms 0
 
-"on_start" = [ if (= (gamemode) 1) [ sleep (* $titlecard 2) [ overseer_intro ] ] ]
+"on_start" = [ if (= (gamemode) 1) [ sleep $titlecard [ overseer_intro ] ] ]
 "overseer_intro" = [
 	overseer_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
 	overseer_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
