better/more smart music stuff, fix warehouse ladders so bots get over them properly, added ladderspeed world variable, flipped hidehud to showhud and added showconsole
Former-commit-id: 78484a3a4dd5274a9712e5721bc934db81557c94

--- a/data/maps/warehouse.cfg
+++ b/data/maps/warehouse.cfg
@@ -6,7 +6,6 @@
 // shadowmapambient 0
 // cloudheight 0.2
 // lavacolour 16729088
-jumpspeed 50.0
 // lightcompress 3
 // lerpsubdivsize 4
 // sinkfric 2.0
@@ -15,7 +14,6 @@ jumpspeed 50.0
 // airfric 25.0
 // mmskylight 1
 // spinsky 0.0
-impulsespeed 50.0
 // cloudclip 0.5
 // cloudfade 0.2
 // skytexture 1
@@ -30,6 +28,7 @@ impulsespeed 50.0
 // lavafog 50
 // lmshadows 1
 // bumperror 3
+// impulsegravity 100.0
 // yawcloudlayer 0
 // cloudscrolly 0.0
 // cloudscrollx 0.0
@@ -37,7 +36,7 @@ impulsespeed 50.0
 // crawlspeed 30.0
 // lerpangle 44
 // flarelights 0
-impulsegravity 100.0
+// impulsespeed 50.0
 // spinclouds 0.0
 // causticscale 100
 // edgetolerance 4
@@ -55,6 +54,8 @@ impulsegravity 100.0
 // skybox [acord/sky7]
 // floorfric 5.0
 // fogcolour 8427955
+// mapmusic []
+// jumpspeed 50.0
 // watercolour 1060960
 // lightlod 0
 // ambient 20
@@ -69,6 +70,7 @@ impulsegravity 100.0
 // liquidscale 0.9
 // liquidfric 10.0
 // mmshadows 1
+// ladderspeed 1.0
 // waterfog 150
 // blurlms 1
 
