Former-commit-id: 56448515dedb806cd9e9a0ea407f2518d543738d

--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -46,6 +46,7 @@ impulsegravity 100.0
 // lightprecision 64
 // numplayers 4
 // adaptivesample 1
+// maptitle [Private Stan Sauer in: THE SERIOUSLY BIG VALLEY by MitaMAN]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
@@ -66,10 +67,9 @@ impulsegravity 100.0
 // cloudsubdiv 16
 // liquidscale 0.6
 // liquidfric 20.0
-// mmshadows 1
+// mmshadows 0
 // waterfog 150
 // blurlms 0
-maptitle "The Seriously Big Valley by MitaMan"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
