more ai/state checking
Former-commit-id: f06742791a4e5ddf630c4c32e3804bf01c619f09

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -162,12 +162,14 @@ bind KP_PLUS		[ conskip -1000 ]
 editbind INSERT 	[ sendmap ]
 editbind DELETE		[ getmap ]
 
-editbind LSHIFT		[ floatspeed 1000; modscale = 10; onrelease [ floatspeed 100; modscale = 1; ] ]
+editbind LSHIFT		[ floatspeed 500; modscale = 10; onrelease [ floatspeed 100; modscale = 1; ] ]
 editbindmod LCTRL	passthrough
 editbindmod LALT	[hmapedit; blendpaintmode 0]
 
 bind MOUSE4			[ universaldelta 1 ]	// also used for editing, see below
 bind MOUSE5			[ universaldelta -1 ]
+bind PAGEUP			[ universaldelta 1 ]
+bind PAGEDOWN		[ universaldelta -1 ]
 
 editbind SPACE  	[ cancelsel ]
 editbind MOUSE1		[ if $blendpaintmode paintblendmap editdrag ]
