rock texture + meshes
Former-commit-id: c605f2a6c09341b7f36833c588b0dc513a7071bd

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -79,7 +79,7 @@ texture n "acord/flatn.jpg" 0 0 0 0.5
 texture s "acord/nospec.jpg" 0
 texture z "acord/flatz.jpg" 0 0 0 0.5
 
-texture 0 "acord/danger.jpg" 1 0 0 0.5
+texture 0 "acord/danger.jpg" 2 0 0 0.5
 texture n "acord/flatn.jpg" 0 0 0 0.5
 texture s "acord/nospec.jpg" 0
 texture z "acord/flatz.jpg" 0 0 0 0.5
@@ -1002,15 +1002,25 @@ texture n "acord/rotten3n.jpg" 3 0 0 0.5
 texture s "acord/lowspec.jpg" 3 0 0 0.5
 texture z "acord/rotten3z.jpg" 3 0 0 0.5
 
-texture 0 "acord/sewer1.jpg" 0 0 0 0.25
-texture n "acord/sewer1n.jpg" 0 0 0 0.25
-texture s "acord/highspec.jpg" 0 0 0 0.25
-texture z "acord/sewer1z.jpg" 0 0 0 0.25
+texture 0 "acord/sewer1.jpg" 0 0 0 0.5
+texture n "acord/sewer1n.jpg" 0 0 0 0.5
+texture s "acord/highspec.jpg" 0 0 0 0.5
+texture z "acord/sewer1z.jpg" 0 0 0 0.5
 
-texture 0 "acord/sewer1.jpg" 3 0 0 0.25
-texture n "acord/sewer1n.jpg" 3 0 0 0.25
-texture s "acord/highspec.jpg" 3 0 0 0.25
-texture z "acord/sewer1z.jpg" 3 0 0 0.25
+texture 0 "acord/sewer1.jpg" 3 0 0 0.5
+texture n "acord/sewer1n.jpg" 3 0 0 0.5
+texture s "acord/highspec.jpg" 3 0 0 0.5
+texture z "acord/sewer1z.jpg" 3 0 0 0.5
+
+texture 0 "acord/techplate2.jpg" 0 0 0 0.5
+texture n "acord/techplate2n.jpg" 0 0 0 0.5
+texture s "acord/highspec.jpg" 0 0 0 0.5
+texture z "acord/techplate2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/techplate2.jpg" 3 0 0 0.5
+texture n "acord/techplate2n.jpg" 3 0 0 0.5
+texture s "acord/highspec.jpg" 3 0 0 0.5
+texture z "acord/techplate2z.jpg" 3 0 0 0.5
 
 texture 0 "acord/tile2.jpg" 0 0 0 0.5
 texture n "acord/tile2n.jpg" 0 0 0 0.5
@@ -1031,6 +1041,21 @@ texture 0 "acord/tile3.jpg" 3 0 0 0.5
 texture n "acord/tile3n.jpg" 3 0 0 0.5
 texture s "acord/highspec.jpg" 3 0 0 0.5
 texture z "acord/tile3z.jpg" 3 0 0 0.5
+
+texture 0 "acord/conc4.jpg" 0 0 0 0.5
+texture n "acord/conc4n.jpg" 0 0 0 0.5
+texture s "acord/conc4s.jpg" 0 0 0 0.5
+texture z "acord/conc4z.jpg" 0 0 0 0.5
+
+texture 0 "acord/conc4.jpg" 3 0 0 0.5
+texture n "acord/conc4n.jpg" 3 0 0 0.5
+texture s "acord/conc4s.jpg" 3 0 0 0.5
+texture z "acord/conc4z.jpg" 3 0 0 0.5
+
+texture 0 "acord/redrock.jpg" 0 0 0 0.5
+texture n "acord/redrockn.jpg" 0 0 0 0.5
+texture s "acord/lowspec.jpg" 0 0 0 0.5
+texture z "acord/redrockz.jpg" 0 0 0 0.5
 
 //Base Metals
 
