--- a/data/models/acord/package.cfg
+++ b/data/models/acord/package.cfg
@@ -48,3 +48,5 @@ mmodel "acord/pipe1/A"
 mmodel "acord/pipe1/B"
 mmodel "acord/vent1"
 mmodel "acord/box3"
+mmodel "acord/redrock1"
+mmodel "acord/redrock2"
