--- a/src/bloodfrontier.cbp
+++ b/src/bloodfrontier.cbp
@@ -73,6 +73,9 @@
 					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add option="-fsigned-char" />
+					<Add option="-finline-functions" />
+					<Add option="-fomit-frame-pointer" />
+					<Add option="-fno-strict-aliasing" />
 					<Add option="-DINTERFACE" />
 					<Add option="-DIRC" />
 					<Add directory="shared" />
