show icon above head when console/gui is open (new texture required: "data/textures/conopen.png"), other random command related polish
Former-commit-id: 6251a9fd8ba77baba85d2089b3b8f80cd110ebcf

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -104,10 +104,11 @@ bind K				[ kill ]
 
 bind TAB			[ showscores ]
 
-bind T				saycommand
+saytextcommand = [inputcommand "" [say $commandbuffer] "textures/player")]
+bind T				saytextcommand
 bind BACKQUOTE		"saycommand /"
 bind SLASH			"saycommand /"
-sayteamcommand = [inputcommand "" [sayteam $commandbuffer] "[team]"]
+sayteamcommand = [inputcommand "" [sayteam $commandbuffer] (concatword "textures/" (getteam))]
 bind Y "sayteamcommand"
 
 bind KP_MINUS		[ conskip 1 ]
