--- a/data/sounds.cfg
+++ b/data/sounds.cfg
@@ -1,75 +1,4 @@
-registersound	"sfx/press"					128	"air"			//	S_GUIPRESS
-registersound	"sfx/back"					128	"air"			//	S_GUIBACK
-registersound	"sfx/change"				128	"air"			//	S_GUIACT
-registersound	"player/jump"				64	"air"	64		//	S_JUMP = S_GAMESPECIFIC
-registersound	"player/impulse"			64	"air"	128		//	S_IMPULSE
-registersound	"player/land"				64	"air"	96		//	S_LAND
-registersound	"player/pain1"				96	"air"	64		//	S_PAIN1
-registersound	"player/pain2"				96	"air"	64		//	S_PAIN2
-registersound	"player/pain3"				96	"air"	64		//	S_PAIN3
-registersound	"player/pain4"				96	"air"	64		//	S_PAIN4
-registersound	"player/pain5"				96	"air"	64		//	S_PAIN5
-registersound	"player/pain6"				96	"air"	64		//	S_PAIN6
-registersound	"player/death1"				96	"air"	64		//	S_DIE1
-registersound	"player/death2"				96	"air"	64		//	S_DIE2
-registersound	"sfx/splash1"				128	"air"	64		//	S_SPLASH1
-registersound	"sfx/splash2"				128	"air"	64		//	S_SPLASH2
-registersound	"sfx/underwater"			255	"air"			//	S_UNDERWATER
-registersound	"sfx/splat"					224	"air"	128		//	S_SPLAT
-registersound	"sfx/splosh"				254	"air"	128		//	S_SPLOSH
-registersound	"sfx/debris"				196	"air"	128		//	S_DEBRIS
-registersound	"sfx/tink"					64	"air"	128		//	S_TINK
-registersound	"sfx/ricochet"				22	"air"	64		//	S_RICOCHET
-registersound	"sfx/whizz"					64	"air"	64		//	S_WHIZZ
-registersound	"sfx/whirr"					196	"air"	128		//	S_WHIRR
-registersound	"sfx/explode"				255	"air"	512		//	S_EXPLODE
-registersound	"sfx/energy"				64	"air"	64		//	S_ENERGY
-registersound	"sfx/hum"					128	"air"	128		//	S_HUM
-registersound	"sfx/burn"					128	"air"	64		//	S_BURN
-registersound	"sfx/burning"				128	"air"	128		//	S_BURNING
-registersound	"sfx/bzap"					64	"air"	64		//	S_BZAP
-registersound	"sfx/bzzt"					128	"air"	128		//	S_BZZT
-registersound	"sfx/weaponreload"			128	"air"	256		//	S_RELOAD
-registersound	"sfx/weapontrigger"			128	"air"	256		//	S_SWITCH
-registersound	"sfx/plasma"				128	"air"	256		//	S_PLASMA
-registersound	"sfx/shotgun"				224	"air"	256		//	S_SG
-registersound	"sfx/chaingun"				128	"air"	256		//	S_CG
-registersound	"sfx/grenadefire"			128	"air"	128		//	S_GLFIRE
-registersound	"sfx/flamer"				224	"air"	224		//	S_FLFIRE
-registersound	"sfx/carbine"				128	"air"	256		//	S_CARBINE
-registersound	"sfx/rifle"					254	"air"	512		//	S_RIFLE
-registersound	"sfx/paintgun"				64	"air"	256		//	S_PAINT
-registersound	"sfx/itempickup"			128	"air" 	128		//	S_ITEMPICKUP
-registersound	"sfx/itemspawn"				118	"air"	128		//	S_ITEMSPAWN
-registersound	"sfx/regenerate"			255	"air"	128		//	S_REGEN
-registersound	"sfx/damage1"				128	"air"	128		//	S_DAMAGE1
-registersound	"sfx/damage2"				128	"air"	128		//	S_DAMAGE2
-registersound	"sfx/damage3"				128	"air"	128		//	S_DAMAGE3
-registersound	"sfx/damage4"				128	"air"	128		//	S_DAMAGE4
-registersound	"sfx/damage5"				128	"air"	128		//	S_DAMAGE5
-registersound	"sfx/damage6"				128	"air"	128		//	S_DAMAGE6
-registersound	"sfx/damage7"				128	"air"	128		//	S_DAMAGE7
-registersound	"sfx/damage8"				128	"air"	128		//	S_DAMAGE8
-registersound	"sfx/respawn"				128	"air"	128		//	S_RESPAWN
-registersound	"sfx/chat"					255	"air" 			//	S_CHAT
-registersound	"sfx/denied"				255	"air"			//	S_DENIED
-registersound	"announce/flagsecured"		128	"air"			//	S_V_FLAGSECURED
-registersound	"announce/flagoverthrown"	128	"air"			//	S_V_FLAGOVERTHROWN
-registersound	"announce/flagtaken"		128	"air"			//	S_V_FLAGPICKUP
-registersound	"announce/flagdropped"		128	"air"			//	S_V_FLAGDROP
-registersound	"announce/flagreturned"		128	"air"			//	S_V_FLAGRETURN
-registersound	"announce/flagcaptured"		128	"air"			//	S_V_FLAGSCORE
-registersound	"announce/flagreset"		128	"air"			//	S_V_FLAGRESET
-registersound	"announce/fight"			128	"air"			//	S_V_FIGHT
-registersound	"announce/checkpoint"		128	"air"			//	S_V_CHECKPOINT
-registersound	"announce/oneminute"		128	"air"			//	S_V_ONEMINUTE
-registersound	"announce/headshot"			128	"air"			//	S_V_HEADSHOT
-registersound	"announce/carnage"			128	"air"			//	S_V_SPREE1
-registersound	"announce/slaughter"		128	"air"			//	S_V_SPREE2
-registersound	"announce/massacre"			128	"air"			//	S_V_SPREE3
-registersound	"announce/bloodbath"		128	"air"			//	S_V_SPREE4
-registersound	"announce/youwin"			128	"air"			//	S_V_YOUWIN
-registersound	"announce/youlose"			128	"air"			//	S_V_YOULOSE
-registersound	"announce/missioncomplete"	128	"air"			//	S_V_MCOMPLETE
-registersound	"announce/fragged"			128	"air"			//	S_V_FRAGGED
-registersound	"announce/owned"			128	"air"			//	S_V_OWNED
+exec "sounds/gui.cfg"
+exec "sounds/player/package.cfg" // S_GAMESPECIFIC
+exec "sounds/package.cfg"
+exec "sounds/announcer/beta/package.cfg"
