added two doors, one taking the player to offline deathmatch, the other connecting them to the main server
Former-commit-id: bc6ddce61a5d6b27196d58be7a1c34cfc422f9ee

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -6,7 +6,6 @@
 // shadowmapambient 0
 // cloudheight 0.2
 // lavacolour 16729088
-jumpspeed 50.0
 // lightcompress 3
 // lerpsubdivsize 4
 // sinkfric 3.0
@@ -15,7 +14,6 @@ jumpspeed 50.0
 // airfric 25.0
 // mmskylight 1
 // spinsky 0.0
-impulsespeed 50.0
 // cloudclip 0.5
 // cloudfade 0.2
 // skytexture 1
@@ -30,6 +28,7 @@ impulsespeed 50.0
 // lavafog 50
 // lmshadows 1
 // bumperror 3
+// impulsegravity 100.0
 // yawcloudlayer 0
 // cloudscrolly 0.0
 // cloudscrollx 0.0
@@ -37,7 +36,7 @@ impulsespeed 50.0
 // crawlspeed 30.0
 // lerpangle 44
 // flarelights 0
-impulsegravity 100.0
+// impulsespeed 50.0
 // spinclouds 0.0
 // causticscale 100
 // edgetolerance 4
@@ -55,6 +54,8 @@ impulsegravity 100.0
 // skybox [acord/overmars]
 // floorfric 5.0
 // fogcolour 8427955
+// mapmusic []
+// jumpspeed 50.0
 // watercolour 1060960
 // lightlod 0
 // ambient 10
@@ -69,10 +70,14 @@ impulsegravity 100.0
 // liquidscale 0.9
 // liquidfric 10.0
 // mmshadows 1
+// ladderspeed 1.0
 // waterfog 150
 // blurlms 0
 
 "on_start" = [ if (= (gamemode) 1) [ sleep $titlecard [ overseer_intro ] ] ]
+"overseer_trigger_1" = [0]
+"overseer_trigger_2" = [0]
+"overseer_trigger_3" = [0]
 "overseer_intro" = [
 	overseer_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
 	overseer_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
@@ -80,12 +85,27 @@ impulsegravity 100.0
 	echo (format "%1Welcome to %2, press [ %3 ] or walk up to a screen to start. Press [ %4 ] to pick up items." $yellow $overseer_welcome $overseer_menu $overseer_action)
 	sound (registersound "sfx/chat" 245 "air" -1 -1 1)
 ]
-"overseer_trigger_1" = 0
 "on_trigger_1" = [
 	if (= (gamemode) 1) [
-		if (|| (= $overseer_trigger_1 0) (>= (- (getmillis) $overseer_trigger_1) 3333)) [
-			if (= (guicount) 0) [ showgui main ]
+		if (|| (= $overseer_trigger_1 0) (>= (- (getmillis) $overseer_trigger_1) 5000)) [
 			overseer_trigger_1 = (getmillis)
+			if (= (guicount) 0) [ showgui main ]
+		]
+	]
+]
+"on_trigger_2" = [
+	if (= (gamemode) 1) [
+		if (|| (= $overseer_trigger_2 0) (>= (- (getmillis) $overseer_trigger_2) 10000)) [
+			overseer_trigger_2 = (getmillis)
+			connect $servermaster
+		]
+	]
+]
+"on_trigger_3" = [
+	if (= (gamemode) 1) [
+		if (= $overseer_trigger_3 0) [
+			overseer_trigger_3 = (getmillis)
+			deathmatch eight
 		]
 	]
 ]
