more fixes/polish
Former-commit-id: 435c9dc3a71eea85090b2abbca064a9708581a82

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -78,6 +78,13 @@
 "overseer_trigger_1" = [0]
 "overseer_trigger_2" = [0]
 "overseer_trigger_3" = [0]
+"overseer_trigger_4" = [0]
+"overseer_trigger_5" = [0]
+"overseer_trigger_6" = [0]
+"overseer_construct" = [
+	echo (format "%1This area is under construction!" $yellow)
+	sound (registersound "sfx/chat" 245 "air" -1 -1 1)
+]
 "overseer_intro" = [
 	overseer_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
 	overseer_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
@@ -106,6 +113,30 @@
 		if (= $overseer_trigger_3 0) [
 			overseer_trigger_3 = (getmillis)
 			deathmatch eight
+		]
+	]
+]
+"on_trigger_4" = [
+	if (= (gamemode) 1) [
+		if (= $overseer_trigger_4 0) [
+			overseer_trigger_4 = (getmillis)
+			overseer_construct
+		]
+	]
+]
+"on_trigger_5" = [
+	if (= (gamemode) 1) [
+		if (= $overseer_trigger_5 0) [
+			overseer_trigger_5 = (getmillis)
+			overseer_construct
+		]
+	]
+]
+"on_trigger_6" = [
+	if (= (gamemode) 1) [
+		if (= $overseer_trigger_6 0) [
+			overseer_trigger_6 = (getmillis)
+			overseer_construct
 		]
 	]
 ]
