grenades just cook, can tab complete commands in any action state, fixed sayteamcommand for non team modes
Former-commit-id: 5b73993d1a7d38fc0e0a42df7750f8c8cb04f7ad

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -104,12 +104,13 @@ bind K				[ kill ]
 
 bind TAB			[ showscores ]
 
-saytextcommand = [inputcommand "" [say $commandbuffer] "textures/player")]
+saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/player")]
+sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "textures/team" (getteam))]
+
 bind T				saytextcommand
 bind BACKQUOTE		"saycommand /"
 bind SLASH			"saycommand /"
-sayteamcommand = [inputcommand "" [sayteam $commandbuffer] (concatword "textures/" (getteam))]
-bind Y "sayteamcommand"
+bind Y 				[ if (& (mutators) 0x0002) [ sayteamcommand ] [ saytextcommand ] ]
 
 bind KP_MINUS		[ conskip 1 ]
 bind KP_PLUS		[ conskip -1000 ]
