filename completion for the map command
Former-commit-id: 5e3e0560419f346432b89801a8f9f2922975c093

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -23,6 +23,7 @@ exec "sounds.cfg"
 //		0x0020	Paintball
 
 mapcomplete			= [ complete $arg1 maps bgz ]
+mapcomplete map
 start				= [ mode $arg2 $arg3; map $arg1 ]; mapcomplete start
 
 demo				= [ stopdemo; start $arg1 0 0x00 ]; complete demo . dmo
