map updates and fixes, plasma weapon tweaks, avoid colliding shots directly with the owner in certain cases, other bugfixes
Former-commit-id: 53ff0833c0cfa77c1851c09621a89182d9d8305a

--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -4,21 +4,21 @@
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // lighterror 8
 // shadowmapambient 0
-// cloudheight 0.2
+// cloudheight 0.05
 // lavacolour 16729088
 // lightcompress 3
 // lerpsubdivsize 4
 // sinkfric 2.0
 // cloudblend 1.0
-// cloudlayer []
+// cloudlayer [<mad:0.3/0.3/0.3>acord/cloudlayer]
 // airfric 25.0
 // mmskylight 1
-// spinsky 0.0
+// spinsky 0.3
 // cloudclip 0.5
 // cloudfade 0.2
 // skytexture 1
 // gravity 100.0
-numteamplayers 6
+// numteamplayers 6
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -30,8 +30,8 @@ numteamplayers 6
 // bumperror 3
 // impulsegravity 100.0
 // yawcloudlayer 0
-// cloudscrolly 0.0
-// cloudscrollx 0.0
+// cloudscrolly -0.05
+// cloudscrollx 0.01
 // impulsetime 0
 // crawlspeed 30.0
 // lerpangle 66
@@ -44,7 +44,7 @@ numteamplayers 6
 // lerpsubdiv 4
 // envmapradius 128
 // lightprecision 32
-numplayers 14
+// numplayers 14
 // adaptivesample 1
 // maptitle [Smouldering by Kurt Kessler]
 // waterfallcolour 0
