--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -18,7 +18,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 40.0
-numteamplayers 4
+// numteamplayers 3
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -43,8 +43,8 @@ numteamplayers 4
 // skylight 0
 // lerpsubdiv 2
 // envmapradius 128
-// lightprecision 28
-numplayers 8
+// lightprecision 29
+// numplayers 4
 // adaptivesample 1
 // maptitle [Gladiator]
 // waterfallcolour 0
