--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -165,7 +165,7 @@ bind KP_PLUS		[ conskip -1000 ]
 editbind INSERT 	[ sendmap ]
 editbind DELETE		[ getmap ]
 
-editbind LSHIFT		[ floatspeed 500; modscale = 10; onrelease [ floatspeed 100; modscale = 1; ] ]
+editbind LSHIFT		[ floatspeed 300; modscale = 10; onrelease [ floatspeed 75; modscale = 1; ] ]
 editbindmod LCTRL	passthrough
 editbindmod LALT	[hmapedit; blendpaintmode 0]
 
@@ -275,10 +275,11 @@ ent_action_cycle          = [ entset ( if ( > $arg1 -1 ) [ result $arg2 ] [ resu
 
 exec "menus.cfg" // keep this here, it uses some of the stuff above
 
-specbind MOUSE1 [ specmodeswitch ]
-specbind MOUSE2 [ spectator 0 ]
-//specbind MOUSE4 [ specfollow 1 ]
-//specbind MOUSE5 [ specfollow -1 ]
+specbind LSHIFT		[ floatspeed 500; onrelease [ floatspeed 75 ] ]
+specbind MOUSE1		[ specmodeswitch ]
+specbind MOUSE2		[ spectator 0 ]
+//specbind MOUSE4	[ specfollow 1 ]
+//specbind MOUSE5	[ specfollow -1 ]
 
 musicfiles = [
 	"loops/mitaman/blinkrage"
