futz the inputcommand icons to be more appropriate
Former-commit-id: 567c46d1524733f90dd215055fb2fb59e4590f6f

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -105,7 +105,7 @@ bind K				[ kill ]
 
 bind TAB			[ showscores ]
 
-saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/player")]
+saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/conopen")]
 sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "textures/team" (getteam))]
 
 bind T				saytextcommand
