fixed some texture typos
Former-commit-id: 5fc7656801330069158b7d9f02f3fd6a7e4e75b5

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -29,7 +29,7 @@ texture z "acord/concretez.jpg" 0 0 0 0.5
 
 texture 0 "acord/concrete.jpg" 1 0 0 0.5
 texture n "acord/concreten.jpg" 1 0 0 0.5
-texture s "acord/lowspec.jpg.jpg" 1
+texture s "acord/lowspec.jpg" 1
 texture z "acord/concretez.jpg" 1 0 0 0.5
 
 //15
@@ -40,28 +40,28 @@ texture z "acord/box1z.jpg" 0 0 0 0.5
 
 texture 0 "acord/box1.jpg" 1 0 0 0.5
 texture n "acord/box1n.jpg" 1 0 0 0.5
-texture s "acord/lowspec.jpg.jpg" 1
+texture s "acord/lowspec.jpg" 1
 texture z "acord/box1z.jpg" 1 0 0 0.5
 
 texture c "acord/box2.jpg" 0 0 0 0.5
 texture n "acord/box2n.jpg" 0 0 0 0.5
-texture s "acord/lowspec.jpg.jpg" 0
+texture s "acord/lowspec.jpg" 0
 texture z "acord/box2z.jpg" 0 0 0 0.5
 
 texture c "acord/box2.jpg" 1 0 0 0.5
 texture n "acord/box2n.jpg" 1 0 0 0.5
-texture s "acord/lowspec.jpg.jpg" 1
+texture s "acord/lowspec.jpg" 1
 texture z "acord/box2z.jpg" 1 0 0 0.5
 
 texture 0 "acord/console.jpg" 0 0 0 0.5
 texture n "acord/consolen.jpg" 0 0 0 0.5
-texture s "acord/lowspec.jpg.jpg" 0
+texture s "acord/lowspec.jpg" 0
 texture z "acord/consolez.jpg" 0 0 0 0.5
 
 //20
 texture 0 "acord/console.jpg" 1 0 0 0.5
 texture n "acord/consolen.jpg" 1 0 0 0.5
-texture s "acordlowspec.jpg.jpg" 1
+texture s "acord/lowspec.jpg" 1
 texture z "acord/consolez.jpg" 1 0 0 0.5
 
 texture 0 "acord/cushion.jpg" 0 0 0 0.5
@@ -744,17 +744,17 @@ texture z "acord/marsrockz.jpg" 1 0 0 0
 
 texture 0 "acord/ice_new.png" 1 0 0 0.5
 texture n "acord/ice_newn.png" 1 0 0 0.5
-texture s "acord/highspec.png" 1 0 0 0.5
+texture s "acord/highspec.jpg" 1 0 0 0.5
 texture z "acord/ice_newz.png" 1 0 0 0.5
 
 texture 0 "acord/ice_old.png" 1 0 0 0.5
 texture n "acord/ice_oldn.png" 1 0 0 0.5
-texture s "acord/highspec.png" 1 0 0 0.5
+texture s "acord/highspec.jpg" 1 0 0 0.5
 texture z "acord/ice_oldz.png" 1 0 0 0.5
 
 texture 0 "acord/snow_fine.png" 1 0 0 0.5
 texture n "acord/snow_finen.png" 1 0 0 0.5
-texture s "acord/highspec.png" 1 0 0 0.5
+texture s "acord/highspec.jpg" 1 0 0 0.5
 texture z "acord/snow_finez.png" 1 0 0 0.5
 
 texture 0 "acord/snow_rough.png" 1 0 0 0.5
@@ -774,7 +774,7 @@ texture z "acord/wood_fine_45z.png" 1 0 0 0.5
 
 texture 0 "acord/wood_rough.png" 1 0 0 0.5
 texture n "acord/wood_roughn.png" 1 0 0 0.5
-texture s "acord/acord/nospec.jpg" 1 0 0 0.5
+texture s "acord/nospec.jpg" 1 0 0 0.5
 texture z "acord/wood_roughz.png" 1 0 0 0.5
 
 texture 0 "acord/wood_rough_45.png" 1 0 0 0.5
