fixed copy-paste-o in lms mapcomplete
Former-commit-id: fc6c5a60bbd144696c122c1a211e5f214747a0e2

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -45,7 +45,7 @@ multictf			= [ start $arg1 6 0x0003 ]; mapcomplete multictf
 instactf			= [ start $arg1 6 0x0006 ]; mapcomplete instactf
 duel				= [ start $arg1 4 0x0008 ]; mapcomplete duel
 instaduel			= [ start $arg1 4 0x000C ]; mapcomplete instaduel
-lms					= [ start $arg1 4 0x0010 ]; mapcomplete duel
+lms					= [ start $arg1 4 0x0010 ]; mapcomplete lms
 instalms			= [ start $arg1 4 0x0014 ]; mapcomplete instalms
 paintball			= [ start $arg1 4 0x0020 ]; mapcomplete paintball
 instapaint			= [ start $arg1 4 0x0024 ]; mapcomplete instapaint
