use -O3 instead of -O2
Former-commit-id: 928456fb328082488a586c3aa22dedf651365db8

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-CXXOPTFLAGS= -O2 -finline-functions -fomit-frame-pointer
+CXXOPTFLAGS= -O3 -fomit-frame-pointer
 INCLUDES= -Ishared -Iengine -Igame -Ienet/include -I/usr/X11R6/include `sdl-config --cflags` -Iinclude
 CXXFLAGS= -Wall -fsigned-char -DINTERFACE -DIRC $(CXXOPTFLAGS) $(INCLUDES)
 
