clipped that crap outta 'em
Former-commit-id: a8f28996904d44f20b7b6be149545d3cca0331fd

--- a/data/maps/d4test.cfg
+++ b/data/maps/d4test.cfg
@@ -4,8 +4,8 @@
 jumpspeed 50.0
 impulsespeed 50.0
 impulsegravity 100.0
-numplayers 4 // number of players in deathmatch
-numteamplayers 1 // number of players per team
+numplayers 2
+numteamplayers 1
 maptitle "Door Test by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
