--- a/data/maps/exoticbase.cfg
+++ b/data/maps/exoticbase.cfg
@@ -4,8 +4,8 @@
 jumpspeed 50.0
 impulsespeed 50.0
 impulsegravity 100.0
-numplayers 10 // number of players in deathmatch
-numteamplayers 6 // number of players per team
+numplayers 10
+numteamplayers 8
 maptitle "Exotic Base by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 0.500000
