--- a/data/maps/mpspbf1.cfg
+++ b/data/maps/mpspbf1.cfg
@@ -5,6 +5,8 @@ jumpspeed 50.0
 impulsespeed 50.0
 impulsegravity 100.0
 maptitle "Untitled Mission by MitaMAN"
+numplayers 4
+numteamplayers 4
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
