--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -20,7 +20,7 @@ impulsespeed 50.0
 // cloudfade 0.5
 // skytexture 1
 // gravity 120.0
-// numteamplayers 4
+numteamplayers 4
 // cloudscale 0.4
 // stepspeed 1.0
 // movespeed 50.0
@@ -44,7 +44,7 @@ impulsegravity 100.0
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 64
-// numplayers 4
+numplayers 4
 // adaptivesample 1
 // maptitle [Private Stan Sauer in: THE SERIOUSLY BIG VALLEY by MitaMAN]
 // waterfallcolour 0
