--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -18,7 +18,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 40.0
-// numteamplayers 4
+numteamplayers 8
 // cloudscale 0.01
 // stepspeed 1.0
 // movespeed 50.0
@@ -44,7 +44,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 8
+numplayers 7
 // adaptivesample 1
 // maptitle [Refuge by Tony Cord]
 // waterfallcolour 0
