--- a/data/maps/siege.cfg
+++ b/data/maps/siege.cfg
@@ -4,8 +4,8 @@
 jumpspeed 50.0
 impulsespeed 50.0
 impulsegravity 100.0
-numplayers 18 // number of players in deathmatch
-numteamplayers 9 // number of players per team
+numplayers 12
+numteamplayers 12
 maptitle "Siege by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 0.500000
