--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -20,7 +20,7 @@ impulsespeed 50.0
 // cloudfade 1.0
 // skytexture 1
 // gravity 40.0
-// numteamplayers 4
+numteamplayers 10
 // cloudscale 0.1
 // stepspeed 1.0
 // movespeed 50.0
@@ -45,7 +45,7 @@ impulsegravity 100.0
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 64
-// numplayers 8
+numplayers 9
 // adaptivesample 1
 // maptitle [Tower by Quinton Reeves]
 // waterfallcolour 0
