--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -18,7 +18,7 @@
 // cloudfade 0.5
 // skytexture 1
 // gravity 40.0
-// numteamplayers 6
+numteamplayers 10
 // cloudscale 0.4
 // stepspeed 1.0
 // movespeed 50.0
@@ -44,7 +44,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 10
+numplayers 10
 // adaptivesample 1
 // maptitle [Warground by Tony Cord]
 // waterfallcolour 0
