--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -20,7 +20,7 @@ impulsespeed 50.0
 // cloudfade 1.0
 // skytexture 1
 // gravity 30.0
-// numteamplayers 12
+numteamplayers 12
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -45,7 +45,7 @@ impulsegravity 100.0
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 96
-// numplayers 20
+numplayers 10
 // adaptivesample 1
 maptitle [Four Square by Tony Cord]
 // waterfallcolour 0
