--- a/data/maps/citadel.cfg
+++ b/data/maps/citadel.cfg
@@ -18,7 +18,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 40.0
-// numteamplayers 5
+numteamplayers 8
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -44,7 +44,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 10
+numplayers 6
 // adaptivesample 1
 // maptitle [Citadel by Tony Cord]
 // waterfallcolour 0
