--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -18,7 +18,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 40.0
-// numteamplayers 2
+numteamplayers 4
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -44,7 +44,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 6
+numplayers 5
 // adaptivesample 1
 // maptitle [Overseer by Tony Cord]
 // waterfallcolour 0
