commented out freezing
Former-commit-id: b5accc948cdcdb0506686d5bd7ab2da7eadb9e16

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -259,6 +259,7 @@ newgui game [
 		]
 		guistrut 2
 		guilist [
+			guistrut 1
 			guilist [
 				guilist [
 					vardef hitpushscale		"hit push scale"
@@ -273,7 +274,7 @@ newgui game [
 					vardef regendelay		"regen delay"
 					vardef regentime		"regen time"
 					vardef spawnprotecttime	"spawn protect"
-					vardef paintfreezetime	"paint freeze"
+					//vardef paintfreezetime	"paint freeze"
 					vardef spawndelay		"spawn delay"
 					vardef ctfspawndelay	"ctf spawn delay"
 					vardef stfspawndelay	"stf spawn delay"
@@ -293,7 +294,7 @@ newgui game [
 					varfld regendelay 6
 					varfld regentime 6
 					varfld spawnprotecttime 6
-					varfld paintfreezetime 6
+					//varfld paintfreezetime 6
 					varfld spawndelay 6
 					varfld ctfspawndelay 6
 					varfld stfspawndelay 6
