--- a/data/models/weapons/rifle/item/md5.cfg
+++ b/data/models/weapons/rifle/item/md5.cfg
@@ -1,21 +1,14 @@
-md5load ../mesh2.md5mesh
+md5load ../mesh.md5mesh
 
 md5tag tag_muzzle tag_muzzle
 
-md5skin mesh1 ../sr1.png ../sr1m.png
-md5skin mesh2 ../sr2.png ../sr2m.png
-md5skin mesh3 ../sr3.png ../sr3m.png
-md5skin mesh4 ../sr4.png ../sr4m.png
-md5skin mesh5 ../sr5.png ../sr5m.png
-md5skin mesh6 ../sr6.png ../sr6m.png
-md5skin mesh7 ../sr7.png ../sr7m.png
-md5skin mesh8 ../sr8.png ../sr8m.png
+md5skin mesh ../skin.jpg ../mask.jpg
+md5bumpmap mesh ../normal.png
 
-mdltrans -18 0 0
 mdlambient 10
-mdlspec 200
-mdlscale 64
-mdlspin 50
+mdlspec 300
+mdlscale 12
+
 
 
 
