--- a/data/models/weapons/rifle/item/md5.cfg
+++ b/data/models/weapons/rifle/item/md5.cfg
@@ -5,6 +5,7 @@ md5tag tag_muzzle tag_muzzle
 md5skin mesh ../skin.jpg ../mask.jpg
 md5bumpmap mesh ../normal.png
 
+mdlspin 50
 mdlambient 10
 mdlspec 300
 mdlscale 12
